Responsive overflow in explain page fixed

--- a/src/client/style/theme/components/explainpage.less
+++ b/src/client/style/theme/components/explainpage.less
@@ -1,5 +1,5 @@
 .stages .stage {
-    height: 200px;
+    min-height: 200px;
     clear: both;
 }
 
